add form registration and login + add styles

--- a/product-details.html
+++ b/product-details.html
@@ -46,7 +46,7 @@
                         <ul
                             class="navbar-items d-flex aling-items-center justify-content-center flex-row text-decoration-none">
                             <li><a class="nav-item" href="./index.html">home</a></li>
-                            <li><a class="nav-item" href="./store">store</a></li>
+                            <li><a class="nav-item" href="./products.html">store</a></li>
                             <li><a class="nav-item" href="./account.html">account</a></li>
                             <a href="./cart.html">
                                 <img id="cart-image" src="./media/cart.png" alt="cart-image">
