--- a/account.html
+++ b/account.html
@@ -46,8 +46,8 @@
                         <ul
                             class="navbar-items d-flex aling-items-center justify-content-center flex-row text-decoration-none">
                             <li><a class="nav-item" href="./index.html">home</a></li>
-                            <li><a class="nav-item" href="./store">store</a></li>
-                            <li><a class="nav-item" href="#">account</a></li>
+                            <li><a class="nav-item" href="./products.html">store</a></li>
+                            <li><a class="nav-item" href="./account.html">account</a></li>
                             <img id="cart-image" src="./media/cart.png" alt="cart-image">
                         </ul>
                     </nav>
@@ -60,12 +60,30 @@
 <div class="background-container">
     <div class="container pb-5">
         <div class="row pt-5">
-            <div class="col-2 col-sm-4 col-md-6 offset-lg-2 col-lg-5">
+            <div class="image-container col-12 offset-sm-2 col-sm-8 col-md-7 offset-lg-1 col-lg-4">
                 <img id="form-image" src="./media/image1.png" alt="form-image">
             </div>
-            <div class="col-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-12 offset-sm-3 col-sm-8 col-md-5 col-lg-4">
                 <div class="form-container">
+                    <div class="form-btn">
+                        <span onclick="login()">Login</span>
+                        <span onclick="register()">Register</span>
+                        <hr id="indicator">
+                    </div>
+                    <form action="" id="login-form">
+                        <input type="text" placeholder="Username">
+                        <input type="password" placeholder="Password">
+                        <button class="btn" type="submit" class="btn">Login</button>
+                        <a class="btn" href="#">Forgot Password</a>
+                    </form>
 
+                    <form action="" id="registration-form">
+                        <input type="text" placeholder="Username">
+                        <input type="email" placeholder="Email">
+                        <input type="password" placeholder="Password">
+                        <button class="btn" type="submit" class="btn">Register</button>
+
+                    </form>
                 </div>
             </div>
         </div>
@@ -161,6 +179,7 @@
 <!-- END OF FOOTER -->
 
 <script src="./main.js"></script>
+<script src="./form.js"></script>
 
 </body>
 </html>
