add minor changes to improve lighthouse report

--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Golden Shoe Webstoe with sales and clearances">
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -48,12 +49,14 @@
                             <li><a class="nav-item" href="./index.html">home</a></li>
                             <li><a class="nav-item" href="./products.html">store</a></li>
                             <li><a class="nav-item" href="./account.html">account</a></li>
-                            <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                            <a href="./cart.html">
+                                <img id="cart-image" src="./media/cart.png" alt="cart-image">
+                            </a>
                         </ul>
                     </nav>
                 </div>
+                <hr>
             </div>
-            <img id="menu-button-mobile" src="./media/menu.png" alt="menu-icon">
         </div>
     </div>
     <!-- END OF NAV BAR -->
@@ -228,7 +231,7 @@
     <section class="footer-bottom-section flex-rw">
         <div class="footer-bottom-wrapper">
             <i class="fa fa-copyright" role="copyright">
-            </i> 2022 <address class="footer-address" role="company address">London, UK</address><span
+            </i> 2022 <address class="footer-address">London, UK</address><span
                 class="footer-bottom-rights"> - All Rights Reserved - </span>
         </div>
         <div class="footer-bottom-wrapper">
