--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Golden Shoe Webstoe with sales and clearances">
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -50,8 +51,8 @@
                     </ul>
                 </nav>
             </div>
+            <hr>
         </div>
-        <img id="menu-button-mobile" src="./media/menu.png" alt="menu-icon">
     </div>
     
 
@@ -298,7 +299,7 @@
     <section class="footer-bottom-section flex-rw">
         <div class="footer-bottom-wrapper">
             <i class="fa fa-copyright" role="copyright">
-            </i> 2022 <address class="footer-address" role="company address">London, UK</address><span
+            </i> 2022 <address class="footer-address">London, UK</address><span
                 class="footer-bottom-rights"> - All Rights Reserved - </span>
         </div>
         <div class="footer-bottom-wrapper">
