add media queries for the product page

--- a/account.html
+++ b/account.html
@@ -55,7 +55,7 @@
                         </ul>
                     </nav>
                 </div>
-                <hr>
+                <hr class="mb-0">
             </div>
         </div>
     </div>
