--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </ul>
                 </nav>
             </div>
-            <hr>
+            <hr class="mb-0">
         </div>
     </div>
     
