--- a/products.html
+++ b/products.html
@@ -53,7 +53,7 @@
                             </a>
                         </ul>
                     </nav>
-                    <hr>
+                    <hr class="mb-0">
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
             </header>
 
             <div class="row">
-                <h2 class="d-flex align-items-center justify-content-center mb-5 mt-5 text-uppercase">all products
+                <h2 class="products-title d-flex align-items-center justify-content-center mb-5 mt-5 text-uppercase">all products
                 </h2>
             </div>
             </div>
@@ -233,7 +233,7 @@
                                 </div>
                                 <small><a href="./products.html" class="btn">Add to cart &#8594</a></small>
                             </div>
-                            <h4>&#163;90.78</h4>
+                            <h4>&#163;40.78</h4>
                         </li>
                         <li data-category="" data-price="">
                             <picture>
@@ -251,7 +251,7 @@
                                 </div>
                                 <small><a href="./products.html" class="btn">Add to cart &#8594</a></small>
                             </div>
-                            <h4>&#163;101.78</h4>
+                            <h4>&#163;60.78</h4>
                         </li>
                         <li data-category="" data-price="">
                             <picture>
