add anchor tag for the 2nd product to redirect to product details page

--- a/products.html
+++ b/products.html
@@ -110,6 +110,7 @@
                             <h4>&#163;45.78</h4>
                         </li>
                         <li data-category="" data-price="">
+                            <a href="./product-details.html">
                             <picture>
                                 <img class="mb-2" src="./media/product-2.jpg" alt="product-2">
                             </picture>
@@ -126,6 +127,7 @@
                                 <small><a href="./products.html" class="btn">Add to cart &#8594</a></small>
                             </div>
                             <h4>&#163;35.78</h4>
+                            </a>
                         </li>
                         <li data-category="" data-price="">
                             <picture>
