add bootstrap class to a tag to change text color

--- a/products.html
+++ b/products.html
@@ -110,7 +110,7 @@
                             <h4>&#163;45.78</h4>
                         </li>
                         <li data-category="" data-price="">
-                            <a href="./product-details.html">
+                            <a class="text-dark" href="./product-details.html">
                             <picture>
                                 <img class="mb-2" src="./media/product-2.jpg" alt="product-2">
                             </picture>
