add return policy for the product details page

--- a/product-details.html
+++ b/product-details.html
@@ -108,10 +108,73 @@
                         </div>
                     </p>
                     <p>Psst...have a look first at the measurements:</p>
-                    <a href="./media/tinywow_men-size_5660277.pdf" target="_blank">Men Sizes</a>
-                    <a href="./media/tinywow_women-shoe_5660303.pdf" target="_blank">Women Sizes</a>
-                    <a href="./media/tinywow_Kids-ShoeSize-Chart-Age_5660360.pdf" target="_blank">Kids Sizes</a><br><br>
-                    <a href="#" class="btn">Add to cart &#8594</a>
+                    <a href="./media/tinywow_men-size_5660277.pdf" target="_blank">| Men Sizes |</a>
+                    <a href="./media/tinywow_women-shoe_5660303.pdf" target="_blank">Women Sizes |</a>
+                    <a href="./media/tinywow_Kids-ShoeSize-Chart-Age_5660360.pdf" target="_blank">Kids Sizes |</a><br><br>
+                    <a href="#" class="btn" data-bs-toggle="modal" data-bs-target="#termModal">Return policy</a><a href="#" class="ms-2 btn">Add to cart &#8594</a>
+
+                    <div class="modal fade" id="termModal" tabindex="-1" aria-labelledby="termModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-xl">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="termModalLabel">Return Policy</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Your statutory rights are not affected by our Returns Policy. To the extent that any provision in
+                                    our Returns Policy conflicts with your statutory rights, your statutory rights will prevail and the
+                                    particular offending provision in our Returns Policy will be deemed inapplicable.
+                                    Returns (refunds and exchanges)
+                                </p>
+                                <p>
+                                    If you are unhappy with your item, please let us know. Our Returns Policy gives you 30 days to
+                                    return or exchange an item bought online with a valid receipt. If 30 days have gone by since
+                                    your purchase, we cannot offer you a refund or exchange.
+                                    To be eligible for a refund or exchange, goods must be returned in a re-saleable condition. That
+                                    means your item must be unused and in the same condition that you received it. The item must
+                                    be in the original packaging and returned with any accessories, labels and “free gifts” or bonus
+                                    items.
+                                </p>
+                                <p>
+                                    To complete your refund or exchange, we require a receipt or proof of purchase. Please do not
+                                    send your purchase back to the manufacturer.
+                                    Refunds (if applicable).
+                                    Once your returned item is received and inspected, we will send you an email to notify you that
+                                    we have received your returned item. We will also notify you of the approval or rejection of your
+                                    refund.
+                                </p>
+                                <p>
+                                    If you are approved, then your refund will be processed, and a credit will automatically be
+                                    applied to your credit card or original method of payment, within 14 calendar days. If you paid
+                                    for standard delivery of the goods, the cost of standard delivery will also be refunded.
+                                </p>
+                                <p>
+                                    There are certain situations where only partial refunds are granted (if applicable):
+                                    <ul>
+                                        <li>Books or other paper products with obvious signs of use;</li>
+                                        <li>Any item not in its original condition, which is damaged or missing parts for reasons not
+                                            due to our error;</li>
+                                        <li>Any item that is returned more than 30 days after delivery.</li>
+                                    </ul>
+                                </p>
+                                <p>
+                                    If you have not received a refund yet, first check your bank account again.
+                                    Then contact your credit card company, it may take some time before your refund is
+                                    officially
+                                    posted.
+                                    Next contact your bank. There is often some processing time before a refund is
+                                    posted.
+                                    If you haveve done all of this and you still have not received your refund yet, please
+                                    contact us at info@golden-shoe.co.uk.
+                                </p>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
                 </div>
             </div>
 
