add stock count in the product details page

--- a/product-details.html
+++ b/product-details.html
@@ -93,6 +93,7 @@
                     <p>Quantity:
                         <input type="number" value="1">
                     </p>
+                    <p>In stock:<strong> 5</strong></p>
                     <p>Size:
                         <br>
                         <div class="sizes">
