add link to the store to the main button on the index page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         Success isn't always about greatness. It's about consistency. <br>
                         Consistent hard work gains success. Greatness will come.
                     </p>
-                    <a href="#" class="btn">Explore now &#8594</a>
+                    <a href="./products.html" class="btn">Explore now &#8594</a>
                 </div>
                 <div class="col-lg-5 col-right">
                     <img src="./media/image1.png" alt="football-players">
