add padding bottom to the feature section

--- a/products.html
+++ b/products.html
@@ -390,8 +390,8 @@
 
 
 
-    <div class="container">
-        <div class="row categories">
+    <div class="container pb-5">
+        <div class="row categories ">
             <h2 class="d-flex align-items-center justify-content-center mb-5 mt-5 text-uppercase">
                 Featured Products
             </h2>
